// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EngagementRecencyOverview current column component renders current count 1`] = `
<NumericDataCell
  value={123}
/>
`;

exports[`EngagementRecencyOverview current column component renders current rate 1`] = `
<PercentDataCell
  value={234}
/>
`;

exports[`EngagementRecencyOverview does not render title 1`] = `
<div
  className="Controls"
>
  <Calculation
    initialSelected="relative"
    onChange={[Function]}
  />
</div>
`;

exports[`EngagementRecencyOverview handles calculation change 1`] = `
<Column
  align="right"
  component={[Function]}
  dataKey="current_engaged_recipients"
  label="Current Count"
  sortable={true}
  width="12.5%"
/>
`;

exports[`EngagementRecencyOverview history component renders absolute sparkline 1`] = `
<SparklineDataCell
  dataKey="engaged_recipients"
  label="Recently Engaged"
  onClick={[Function]}
  relative={false}
/>
`;

exports[`EngagementRecencyOverview history component renders relative sparkline 1`] = `
<SparklineDataCell
  dataKey="relative_engaged_recipients"
  label="Recently Engaged"
  onClick={[Function]}
  relative={true}
/>
`;

exports[`EngagementRecencyOverview renders overview panel with controls and table 1`] = `
<Panel>
  <div
    className="Header"
  >
    <div
      className="Controls"
    >
      <Calculation
        initialSelected="relative"
        onChange={[Function]}
      />
    </div>
  </div>
  <Connect(SummaryTable)
    data={
      Array [
        Object {
          "WoW": 0.1,
          "current_engaged_recipients": 12,
          "current_relative_engaged_recipients": 5,
          "domain": "example.com",
          "history": Array [
            Object {
              "date": "2018-01-13",
              "engaged_recipients": 12,
              "relative_engaged_recipients": 5,
            },
          ],
        },
      ]
    }
    empty={false}
    loading={false}
    tableName="Test"
    totalCount={1}
  >
    <Column
      component={[Function]}
      dataKey="domain"
      label="Domain"
      sortable={true}
      width="30%"
    />
    <Column
      component={[Function]}
      dataKey="history"
      label="Daily Recently Engaged Recipients"
      width="30%"
    />
    <Column
      align="right"
      component={[Function]}
      dataKey="current_relative_engaged_recipients"
      label="Current Ratio"
      sortable={true}
      width="12.5%"
    />
    <Column
      align="right"
      component={[Function]}
      dataKey="WoW"
      label={<WoWHeaderCell />}
      width="12.5%"
    />
    <Column
      align="right"
      component={[Function]}
      dataKey="c_total"
      label="Current Injections"
      sortable={true}
      width="15%"
    />
  </Connect(SummaryTable)>
</Panel>
`;
